--- a/MovieProject/Base.lproj/Main.storyboard
+++ b/MovieProject/Base.lproj/Main.storyboard
@@ -117,6 +117,14 @@
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1Ap-Py-ugh">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="537.5"/>
                                             </imageView>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="play.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Xf0-ia-bcq">
+                                                <rect key="frame" x="349" y="25.5" width="50" height="49"/>
+                                                <color key="tintColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="50" id="Tw8-Sz-F9j"/>
+                                                    <constraint firstAttribute="height" constant="50" id="cru-vc-XI3"/>
+                                                </constraints>
+                                            </imageView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K9X-7R-6Ta">
                                                 <rect key="frame" x="0.0" y="269" width="414" height="268.5"/>
                                                 <subviews>
@@ -366,10 +374,12 @@
                                         <constraints>
                                             <constraint firstItem="K9X-7R-6Ta" firstAttribute="leading" secondItem="Lgb-Ga-B4i" secondAttribute="leading" id="129-Mn-YRz"/>
                                             <constraint firstItem="K9X-7R-6Ta" firstAttribute="height" secondItem="Lgb-Ga-B4i" secondAttribute="height" multiplier="0.2" id="3gZ-W8-zHi"/>
+                                            <constraint firstItem="Xf0-ia-bcq" firstAttribute="trailing" secondItem="1Ap-Py-ugh" secondAttribute="trailing" constant="-15" id="4Zk-q7-X03"/>
                                             <constraint firstItem="1Ap-Py-ugh" firstAttribute="leading" secondItem="Lgb-Ga-B4i" secondAttribute="leading" id="CAx-gC-HsA"/>
                                             <constraint firstItem="K9X-7R-6Ta" firstAttribute="trailing" secondItem="Lgb-Ga-B4i" secondAttribute="trailing" id="HRr-Ch-Wio"/>
                                             <constraint firstItem="S7x-cV-qnq" firstAttribute="height" secondItem="Lgb-Ga-B4i" secondAttribute="height" multiplier="0.6" id="HiH-ZC-XG6"/>
                                             <constraint firstItem="1Ap-Py-ugh" firstAttribute="height" secondItem="Lgb-Ga-B4i" secondAttribute="height" multiplier="0.4" id="TVN-du-SfS"/>
+                                            <constraint firstItem="Xf0-ia-bcq" firstAttribute="top" secondItem="1Ap-Py-ugh" secondAttribute="top" constant="25" id="Y7a-VA-kkN"/>
                                             <constraint firstItem="1Ap-Py-ugh" firstAttribute="trailing" secondItem="Lgb-Ga-B4i" secondAttribute="trailing" id="cZP-NI-9qa"/>
                                             <constraint firstItem="1Ap-Py-ugh" firstAttribute="top" secondItem="Lgb-Ga-B4i" secondAttribute="top" id="heT-ox-Paj"/>
                                             <constraint firstItem="S7x-cV-qnq" firstAttribute="bottom" secondItem="Lgb-Ga-B4i" secondAttribute="bottom" id="iRP-p0-igb"/>
@@ -416,13 +426,14 @@
                         <outlet property="releaseDateLabel" destination="tos-1m-qqh" id="QeS-2i-ri5"/>
                         <outlet property="revenueLabel" destination="hr1-IT-DKb" id="Nd3-tz-toZ"/>
                         <outlet property="runtimeLabel" destination="RmY-jN-hds" id="p7N-p6-h5W"/>
+                        <outlet property="trailerButton" destination="Xf0-ia-bcq" id="oOE-Jc-6u9"/>
                         <outlet property="voteAverageLabel" destination="k7S-aD-QIz" id="WIh-mt-isH"/>
                         <outlet property="watchProvidersView" destination="jUZ-1p-1Ho" id="TOH-HX-h1R"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HMB-qI-t1i" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2562.5954198473282" y="3.5211267605633805"/>
+            <point key="canvasLocation" x="2562.3188405797105" y="3.3482142857142856"/>
         </scene>
         <!--CastDetail-->
         <scene sceneID="pzk-Ld-m8S">
@@ -644,6 +655,7 @@
         <image name="dollarsign.arrow.circlepath" catalog="system" width="128" height="112"/>
         <image name="heart.fill" catalog="system" width="128" height="107"/>
         <image name="homekit" catalog="system" width="128" height="104"/>
+        <image name="play.circle.fill" catalog="system" width="128" height="123"/>
         <image name="play.rectangle.on.rectangle.fill" catalog="system" width="128" height="98"/>
         <image name="star.fill" catalog="system" width="128" height="116"/>
         <image name="timer" catalog="system" width="128" height="123"/>
