--- a/MovieProject/Base.lproj/Main.storyboard
+++ b/MovieProject/Base.lproj/Main.storyboard
@@ -59,6 +59,64 @@
             </objects>
             <point key="canvasLocation" x="1802.8985507246377" y="-646.20535714285711"/>
         </scene>
+        <!--CustomListView-->
+        <scene sceneID="fgH-B4-vx8">
+            <objects>
+                <viewController title="CustomListView" id="ny6-KZ-hs4" customClass="CustomListViewController" customModule="MovieProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="rRY-nr-DzY">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="MN5-TY-8nf">
+                                <rect key="frame" x="0.0" y="92" width="414" height="721"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="Wky-hH-1Mg">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="ny6-KZ-hs4" id="rq8-MZ-Lzh"/>
+                                    </connections>
+                                </searchBar>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="GE6-j4-qdb">
+                                        <rect key="frame" x="0.0" y="94" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GE6-j4-qdb" id="C3h-ev-b6E">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="j4l-oN-uTE"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="MN5-TY-8nf" firstAttribute="leading" secondItem="j4l-oN-uTE" secondAttribute="leading" id="PbS-1s-RhU"/>
+                            <constraint firstItem="j4l-oN-uTE" firstAttribute="trailing" secondItem="MN5-TY-8nf" secondAttribute="trailing" id="SdO-2p-BWV"/>
+                            <constraint firstItem="MN5-TY-8nf" firstAttribute="top" secondItem="j4l-oN-uTE" secondAttribute="top" id="v7D-KD-dli"/>
+                            <constraint firstItem="j4l-oN-uTE" firstAttribute="bottom" secondItem="MN5-TY-8nf" secondAttribute="bottom" id="vUa-7e-wXT"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="CustomListName" id="FEq-lA-cpJ"/>
+                    <connections>
+                        <outlet property="searchDisplayController" destination="gj1-zv-ABD" id="sPc-LN-h9P"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fyC-Wb-PaO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="gj1-zv-ABD">
+                    <connections>
+                        <outlet property="delegate" destination="ny6-KZ-hs4" id="Pnn-yC-zX3"/>
+                        <outlet property="searchBar" destination="Wky-hH-1Mg" id="z5j-0j-gKM"/>
+                        <outlet property="searchContentsController" destination="ny6-KZ-hs4" id="tUC-4z-Nb0"/>
+                        <outlet property="searchResultsDataSource" destination="ny6-KZ-hs4" id="W2y-1I-hzZ"/>
+                        <outlet property="searchResultsDelegate" destination="ny6-KZ-hs4" id="k1U-Dc-Gcv"/>
+                    </connections>
+                </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="1803" y="-1311"/>
+        </scene>
         <!--Movies-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -604,6 +662,7 @@
                     <connections>
                         <segue destination="Geh-zH-xfi" kind="relationship" relationship="viewControllers" id="es5-Lh-dnL"/>
                         <segue destination="MEa-H3-cn2" kind="relationship" relationship="viewControllers" id="3Zv-fZ-mmM"/>
+                        <segue destination="iOb-Mt-AjU" kind="relationship" relationship="viewControllers" id="Ct9-hL-ZqX"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zOP-4t-qwk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -647,6 +706,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V0z-Sy-32K" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="892.75362318840587" y="-646.20535714285711"/>
+        </scene>
+        <!--CustomLists-->
+        <scene sceneID="mBR-tN-Hjd">
+            <objects>
+                <navigationController title="CustomLists" automaticallyAdjustsScrollViewInsets="NO" id="iOb-Mt-AjU" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="lUb-ZV-E1U"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="N6i-fA-AIq">
+                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ny6-KZ-hs4" kind="relationship" relationship="rootViewController" id="6qc-CI-Swo"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1s7-qc-GKC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="893" y="-1311"/>
         </scene>
     </scenes>
     <resources>
